--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div class="teste">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque totam molestias dicta quas, obcaecati tempora autem eaque aut voluptatum reprehenderit sed quidem assumenda quia, pariatur praesentium, nostrum itaque ad unde!</p>
+        <p>CRiada nova atualisação</p>
     </div>
     
 </body>
